--- a/config/services.yaml
+++ b/config/services.yaml
@@ -25,3 +25,8 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
+    'App\Normalizer\JsonLdItemNormalizer':
+        class: 'App\Normalizer\JsonLdItemNormalizer'
+        decorates: 'api_platform.jsonld.normalizer.item'
+        arguments: [ '@App\Normalizer\JsonLdItemNormalizer.inner' ]
